# MiniCode

./: .gitignore  README.md  pyproject.toml
minicoder/: __init__.py  __main__.py  agent.py  cli.py  config.py  context.py  llm.py  prompt.py  session.py  skills.py
minicoder/hooks/: __init__.py  manager.py  skill_prompt.py
minicoder/tools/: __init__.py  agent.py  ask_user.py  base.py  bash.py  edit.py  grep.py  plan.py  read.py  skill.py  write.py
tests/: test_ask_user.py  test_hooks.py  test_plan.py
